# magic-games-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  commanders.py  index.html  index.scss
src/: messages.rs
src/client/: app.rs
src/client/components/: commander_input.rs  mod.rs  player_data.rs  player_select.rs  rank_select.rs  toast.rs  winner_select.rs
src/server/: main.rs
