[package]
name = "magic-games-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is only here to make autocompletes happy.
# Seems like they don't know that we want wasm32 as the arch when building the client.
# There's probably a better way to do this, but this is fine for now.
yew = { version="0.20", features=["csr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { version="0.20", features=["csr"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
serde = "1.0.193"
serde_json = "1.0.109"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

