[package]
name = "magic-games-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is only here to make autocompletes happy.
# Seems like they don't know that we want wasm32 as the arch when building the client.
# There's probably a better way to do this, but this is fine for now.
gloo-net = "0.5.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
serde = "1.0.193"
yew = { version="0.21", features=["csr"] }
gloo-console = "0.3.0"
web-sys = { version="0.3.66", features = ["HtmlInputElement", "HtmlSelectElement"] }
gloo = "0.11.0"
chrono = "0.4.31"
yew-hooks = "0.3.0"
gloo-timers = "0.3.0"
itertools = "0.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7.3"
clap = { version = "4.4.14", features = ["derive"] }
tower-http = { version="0.5.0", features=["cors", "fs"] }
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "chrono", "postgres" ] }
serde_json = "1.0.109"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[profile.dev.package.sqlx-macros]
opt-level = 3
